Fix multiple layout issues in Get Started pages

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -36,6 +36,9 @@ body {
     max-width: $CONTENT_WIDTH;
     flex-direction: column;
 }
+#content > h1, .get-started-content > h1 {
+    margin-top: 0;
+}
 #content-holder > div {
     padding: 2rem .5rem;
     margin: 0 auto;
