--- a/src/sass/pages/trading/pages.scss
+++ b/src/sass/pages/trading/pages.scss
@@ -601,11 +601,6 @@ div#price_table_notes {
         margin-top: 0;
     }
 }
-.get-started-content {
-    .button {
-        width: 100%;
-    }
-}
 
 .charting-application-content .appshot {
     height: 20rem;
